$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-16 (opened May 11, 2012)

	* ordihull: gained explicit 'col' argument and adds labels after
	drawing convex hulls so that filled hulls (with 'draw = "polygon")
	do not cover labels. With these changes, the behaviour of
	ordihull() is similar to ordiellipse(). The labels are centred
	more correctly.

	* monoMDS: Count only above-zero non-NA dissimilarities for the
	absolute lower limit of sufficient data. 

	* bioenv: accepts now dissimilarities or a square matrix that can
	interpred as dissimilarities instead of a community data frame.
	This allows using other dissimilarities than those in vegdist(). 

	* update.nullmodel: explicit assignment is required to update
	the input object (nm <- update(nm, ...)).

	* ordiplot3d: the returned envfit.convert() function did not
	recognize 'choices'.

Version 2.1-15 (closed May 11, 2012)

	* rrarefy, drarefy: check the data are integers -- the functions
	do not give sensible results with real values.

	* monoMDS: checks now that there is a sufficient number of non-NA
	dissimilarities for the analysis. People really try to use NMDS
	with too small data sets. The change was triggered by a user who
	had tried to find a six-dimensional solution for seven points
	(21 dissimilarities, 42 scores) using 100,000 random starts in
	metaMDS. With over-defined models there is an infinite number of
	different solutions with nearly zero stress, and no convergence is
	found. 

	* ordiplot3d: function returns the projected coordinates of the
	origin, and function envfit.convert() that can project a
	three-dimensional envfit() result to the current plot. Unlike
	originally assumed, the function will not set equal aspect ratio
	for all axes.  We try to compensate this by setting equal scaling
	to all axes.
	
Version 2.1-14 (opened March 9, 2012)

	* Opened a new version with the CRAN release of vegan 2.0-3 on
	March 3, 2012.
